change summary labels to something shorter and change select to choose

--- a/app/views/forms/education/denominational-or-non.html
+++ b/app/views/forms/education/denominational-or-non.html
@@ -21,7 +21,7 @@
         name: "school",
         fieldset: {
           legend: {
-            text: "Select a school",
+            text: "Choose a school",
             isPageHeading: true,
             classes: "govuk-fieldset__legend--m"
           }
