--- a/app/views/forms/education/declaration-error.html
+++ b/app/views/forms/education/declaration-error.html
@@ -2,7 +2,7 @@
 {% extends "layout-ERC.html" %}
 
 {% block pageTitle %}
-  Declaration
+  Error - Declaration
 {% endblock %}
 
 {% block content %}
