--- a/app/views/forms/education/declaration1.html
+++ b/app/views/forms/education/declaration1.html
@@ -35,7 +35,7 @@
               },
               {
                 value: "dec2",
-                text: "the information I’ll give is full and correct"
+                text: "The information I’ll give is full and correct"
               },
               {
                 value: "dec3",
@@ -43,7 +43,7 @@
               },
               {
                 value: "dec4",
-                text: "you won’t process my application unless it’s complete"
+                text: "You won’t process my application unless it’s complete"
               }
             ]
           }) }}
