--- a/app/views/forms/education/medical.html
+++ b/app/views/forms/education/medical.html
@@ -46,9 +46,16 @@
       </form>
       <div class="design-notes-box">
           <h3 class="govuk-heading-s">Design notes:</h3>
-          <p>This will be re-worded to make sure parents understand why we ask and what conditions are relevant or not - it should be question 2 of the priority questions</p>
-          <p>Heather: revise the wording to reflect original question on current application form </p>
-          <p>We could ask if the GP has been involved and prepared the notes for the school as it could be an indicator that we do need to know about it.</p>
+          <ul class="govuk-list govuk-list--bullet">
+              <li>This will be re-worded to make sure parents understand why we ask and what conditions are relevant or not - it should be question 2 of the priority questions (Heather)</li>
+              <li>Revise the wording to reflect original question on current application form  (Heather)</li>
+              <li>We could ask if the GP has been involved and prepared the notes for the school as it could be an indicator that we do need to know about it.</li>
+              <li>We could have another question after this one asking if a medical practitioner has seen the child etc...? yes/no and if yes go to Give details</li>
+
+            </ul>
+          <p></p>
+          <p></p>
+          <p></p>
       </div>
     </div>
 </div>
