--- a/app/views/forms/education/nursery-name.html
+++ b/app/views/forms/education/nursery-name.html
@@ -18,7 +18,7 @@
 
         {{ govukInput({
           label: {
-            text: "Enter the name and address of the nursery",
+            text: "Enter name and address of nursery",
             classes: "govuk-!-font-size-24"
           },
           id: "other-nursery",
@@ -34,10 +34,6 @@
         }) }}
 
       </form>
-      <div class="design-notes-box">
-          <h3 class="govuk-heading-s">Design notes:</h3>
-          <p>This is only provisional content to illustrate</p>    
-      </div>
     </div>
 </div>
 
