--- a/app/views/forms/education/nursery.html
+++ b/app/views/forms/education/nursery.html
@@ -24,7 +24,7 @@
             name: "other-nursery",
             value: data['other-nursery'],
             label: {
-              text: "Enter the name and address of the nursery"
+              text: "Enter name and address of nursery"
             }
           }) }}
           {% endset -%}
@@ -143,7 +143,6 @@
           <h3 class="govuk-heading-s">Design notes:</h3>
           <p>New content</p>
           <p>To view the same content but <a href="/forms/education/nursery1.html"><strong>with a dropdown list</strong></a></p>
-          <p><strong>we need content for error messages: if they didn't pick an option, or they picked 'Another nursery' and didn't fill in the textbox</strong></p>
       </div>
     </div>
 </div>
