--- a/app/views/forms/education/postcode-with-address.html
+++ b/app/views/forms/education/postcode-with-address.html
@@ -69,6 +69,6 @@
 </div>
 <div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
-  <p>removed 'optional' next to building - make sure all the details from CAG are captured (but the UPRN)</p>
+  <p>removed 'optional' next to building or any other field that is optional -  All possible 8 fields from CAG are captured (but the UPRN) will be displayed (example G78 1AA)</p>
 </div>
 {% endblock %}
