--- a/app/views/forms/education/sibling-name.html
+++ b/app/views/forms/education/sibling-name.html
@@ -2,7 +2,7 @@
 {% extends "layout-ERC.html" %}
 
 {% block pageTitle %}
-  Sibling's name
+  Sibling name
 {% endblock %}
 
 {% block content %}
@@ -59,7 +59,7 @@
 </div>
 <div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
-    <p>For consistency, we ask for the middle name even though it's not needed.</p>
+    <p>For consistency, we ask for the middle name even though it's not needed. Could say Other child first name etc... instead of sibling?</p>
 </div>
 
 {% endblock %}
