--- a/app/views/forms/education/summary.html
+++ b/app/views/forms/education/summary.html
@@ -231,10 +231,12 @@
       <p>By submitting you are confirming that, to the best of your knowledge, the details you're providing are correct.</p>
 
       {{ govukButton({
-        text: "Accept and submit your answers",
+        text: "Accept and submit your application",
         href: "/forms/education/confirmation.html",
         classes: "button-primary"
       }) }}
+
+      <p><strong class="tag-print">Print this page</strong></p>
     </div>
 </div>
 
