--- a/app/views/forms/education/info.html
+++ b/app/views/forms/education/info.html
@@ -12,15 +12,13 @@
         <h1 class="govuk-heading-l">
             Apply online for primary 1 - August 2019
         </h1>
-      <h2 class="govuk-heading-m">
-          Other information
-        </h2>
-        <p>We can’t always guarantee places at your catchment school.</p> 
+        
+        <p><strong>We can’t always guarantee places at your catchment school.</strong></p> 
 
-        <p>If this happens we need extra information to prioritise places.</p> 
+        <p><strong>If this happens we need extra information to prioritise places.</strong></p> 
         
-        <p>We’ll ask for proof of any details you give.</p>
-        
+        <p><strong>We’ll ask for proof of any details you give.</strong></p>
+
 
       {{ govukButton({
         "text": "Continue",
@@ -32,7 +30,7 @@
           <p>The content is new but still been worked on, we will refer to the original application form , this is just to illustrate that we will address the priorities grouped after this point, with some guidance here. </p>
           <p>After this page, we remove all texts which was there previously mentioning "if your catchment school is full" to avoid adding stress by repetition.</p>
           <p>Heather's note: with this statement it would be helpful to refer the applicant to the policy again</p>
-          <p>We might explain None option here - in reference to paragraph 3</p>
+          <p>We might explain None option here - in reference to paragraph 3? </p>
       </div>
     </div>
 </div>
