create extra confirmation with button going back to 1st page

--- a/app/views/forms/education/P1-start.html
+++ b/app/views/forms/education/P1-start.html
@@ -41,7 +41,7 @@
 <div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
-        <li>This content will change to something which describes all the step of the application ad enrolment - needs to be signed off by Education</li> 
+        <li>This content will change to something which describes all the step of the application and enrolment - needs to be signed off by Education</li> 
     </ul>
 </div>
 
