--- a/app/views/forms/education/confirmation.html
+++ b/app/views/forms/education/confirmation.html
@@ -48,6 +48,7 @@
       <h3 class="govuk-heading-s">Design notes:</h3>
       <ul class="govuk-list govuk-list--bullet">
         <li>One solution would be to simply take them back via a button to the start of the Before you start page, where we would have guidance about next step, and to send everyone a letter (personalised)</li>
+        <li><a href="/forms/education/confirmation2.html">see with a button to go back to the Before you start page</a></li>
         <li>guidance about what happen next will be drafted so we set expectations, it could be in a form of a pdf they can download or view on a new tab. This will also be the body of the email we sent if they had an email address (two versions, one for is specific to Maidenhill)</li>
         <li><a href="/forms/education/confirmation1.html">see with an email address provided</a></li>
         <li>email should be receive nearly instantly - should we mention what to do if you didn't receive it to check their spam?</li>
