--- a/app/views/forms/education/confirmation2.html
+++ b/app/views/forms/education/confirmation2.html
@@ -35,9 +35,16 @@
           <strong>parent.email.address@gmail.com</strong></p>
         <p>If you don't receive our email in the next 5 minutes, please check your SPAM folder.</p>
       <p>Admissions Team.</p>
-    <p>&nbsp;</p>
+
     <h3 class="govuk-heading-m">What happens next</h3>
-    <p>You can <a href="/../..{{ publicPath }}/images/application-info.pdf" download="information-P1-application">download the information as a PDF</a> or <a href="/forms/education/information-application.html" target="_blank" rel="noopener">view it in a new tab.</a></p>
+    <p>main steps here as quick bullet points</p>
+
+    {{ govukButton({
+      text: "Read the guidance for P1 enrolment",
+      href: "/forms/education/P1-start.html",
+      classes: "govuk-!-margin-top-2 govuk-!-margin-bottom-8"
+    }) }}
+ 
     <p>&nbsp;</p>
 
     </div>
@@ -45,12 +52,8 @@
   <div class="design-notes-box">
       <h3 class="govuk-heading-s">Design notes:</h3>
       <ul class="govuk-list govuk-list--bullet">
-        <li>One solution would be to simply take them back via a button to the start of the Before you start page, where we would have guidance about next step, and to send everyone a letter (personalised)</li>
-        <li><a href="/forms/education/confirmation2.html">see with a button to go back to the Before you start page</a></li>
-        <li>guidance about what happen next will be drafted so we set expectations, it could be in a form of a pdf they can download or view on a new tab. This will also be the body of the email we sent if they had an email address (two versions, one for is specific to Maidenhill)</li>
-        <li>email should be receive nearly instantly - should we mention what to do if you didn't receive it to check their spam?</li>
-        <li>anything we will send in the email should also appear here as some won't receive it, and other will lose the email</li>
-        <li>have a link to the documents they need to apply + Admission policy + placing request policy + Heather</li>
+        <li>This solution would be to simply take them back via a button to the start of the Before you start page, where we would have guidance about next step, and to send everyone a letter (personalised)</li>
+        <li>Sharon will provide the content for the bullet point here + the text on the button, and the Before you start page will have improved guidance.</li>
       </ul>
   </div>
 {% endblock %}
