improve bottom link page, mostly privacy

--- a/app/views/contact-us.html
+++ b/app/views/contact-us.html
@@ -9,18 +9,18 @@
 <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
-      <h1 class="govuk-heading-xl">
+      <h1 class="govuk-heading-l">
         Contact us
       </h1>
       <p>
           No matter how you choose to contact us, you can expect efficient, effective and helpful service. Our customer first team can help you with requests for services and information - and if they can't, they'll find someone who can.
       </p>
 
-      <h2 class="govuk-heading-l erc-text-blue">Online</h2>
+      <h2 class="govuk-heading-m erc-text-blue">Online</h2>
       <p>You can access our services 24/7 by visiting the "Pay | Book | Apply | Report" section.</p> 
       <p>You can also chat to our customer service officers via Live chat, Monday to Friday, 9am - 4.45pm</p>
 
-      <h2 class="govuk-heading-l">Telephone</h2>
+      <h2 class="govuk-heading-m">Telephone</h2>
       <ul class="govuk-list govuk-list--bullet"></ulclass>
           <li>switchboard: 0141 577 3000</li>
           <li>general enquiries: 0141 577 3001</li>
