--- a/app/views/components/upload.html
+++ b/app/views/components/upload.html
@@ -9,7 +9,7 @@
 <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-xl">
+      <h1 class="govuk-heading-l">
         Upload
       </h1>
       <p><strong class="govuk-tag black">GDS reference</strong><a href="https://design-system.service.gov.uk/components/file-upload/" target="_blank" rel="noopener">link for upload</a></p>
