--- a/app/views/forms/housing/CBLinfo-housed.html
+++ b/app/views/forms/housing/CBLinfo-housed.html
@@ -13,9 +13,8 @@
             Apply online for Housing
         </h1>
         <h2 class="govuk-heading-m">
-            Who will be living with you?
+            We need to know who will be living with you
           </h2>
-          <p>We'll need some information about any person who will be living with you.</p>
           <p>Only add children if they live permanently with you.</p>
           <p>Any children staying with you occasionally will be added later.</p>
 
