--- a/app/views/patterns/menu-patterns.html
+++ b/app/views/patterns/menu-patterns.html
@@ -9,7 +9,7 @@
 <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-xl">
+      <h1 class="govuk-heading-l">
         List of the patterns
       </h1>
       <p>
@@ -17,6 +17,7 @@
       </p>
       <hr class="govuk-section-break govuk-section-break--l">
       <ul class="govuk-list govuk-list--bullet">
+        <li><a href="add-to-a-list.html">Add to a list</a></li>
         <li><a href="#"></a>Question page</li>
         <li><a href="#"></a>Start page</li>
         <li><a href="#"></a>Check your answers</li>
@@ -27,13 +28,8 @@
         <li><a href="#"></a>payment and card details</li>
         <li><a href="#"></a>date input</li>
         <li><a href="#"></a>address input in CAG vs outside</li>
-        <li><a href="#"></a>Maps</li>
+        <li><a href="maps.html">Maps</a></li>
       </ul>
-      <hr class="govuk-section-break govuk-section-break--l">
-      <p>Links to add in the sub-sections:</p>
-      <p><a href="http://www.eastrenfrewshire.gov.uk/map" target="_blank" rel="noopener">http://www.eastrenfrewshire.gov.uk/map</a></p>
-      <p><a href="https://glasgowgis.maps.arcgis.com/apps/LocalPerspective/index.html?appid=e99ff0bfd5a44fd6a1c68de66e123299" target="_blank" rel="noopener">https://glasgowgis.maps.arcgis.com/apps/LocalPerspective/index.html?appid=e99ff0bfd5a44fd6a1c68de66e123299/a></p>
-      <p><a href="https://github.com/esri" target="_blank" rel="noopener">https://github.com/esri</a></p>
     </div>
 </div>
 
