--- a/app/views/useful-links.html
+++ b/app/views/useful-links.html
@@ -9,7 +9,7 @@
 <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
-      <h1 class="govuk-heading-xl">
+      <h1 class="govuk-heading-l">
         Useful links - videos - documents
       </h1>
 
