--- a/app/views/index.html
+++ b/app/views/index.html
@@ -9,9 +9,9 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-xl">
+      <h1 class="govuk-heading-l">
         ERC prototype using the GOV.UK Prototype Kit
-        <span class="govuk-caption-xl">{{releaseVersion}}</span>
+        <span class="govuk-caption-l">{{releaseVersion}}</span>
       </h1>{{releaseVersion | log }}
       <p>
         This kit lets you rapidly create HTML prototypes using GDS principles.
